--- a/add-observation.html
+++ b/add-observation.html
@@ -70,7 +70,7 @@
             >
             <input
               id="obs-name"
-              name="name"
+              name="species-name"
               type="text"
               required
               maxlength="200"
@@ -82,7 +82,7 @@
             >
             <input
               id="obs-desc"
-              name="desc"
+              name="description"
               type="text"
               required
               placeholder="Roosting on fence post at the edge of a field"
@@ -109,7 +109,7 @@
             >
             <input
               id="lat"
-              name="lat"
+              name="latitude"
               type="text"
               required
               placeholder="43.7955"
@@ -120,7 +120,7 @@
             >
             <input
               id="long"
-              name="long"
+              name="longitude"
               type="text"
               required
               placeholder="-79.3496"
@@ -137,7 +137,7 @@
             <label for="photo-name">Photographer Name</label>
             <input
               id="photo-name"
-              name="photo-name"
+              name="photographer"
               type="text"
               maxlength="100"
               placeholder="Karen Shu"
@@ -152,7 +152,7 @@
             />
 
             <label for="photo-img">Photo</label>
-            <input id="img" name="img" type="file" accept="image/*" />
+            <input id="img" name="image" type="file" accept="image/*" />
 
             <label for="photo-license"
               >License (<a href="https://creativecommons.org/choose/"
