--- a/add-observation.html
+++ b/add-observation.html
@@ -61,7 +61,7 @@
       <section>
         <h2>Observation Details</h2>
         <p><span class="required">*</span> Required field</p>
-        <form action="https://formspree.io/f/moqyqgdj" method="POST">
+        <form action="https://formspree.io/f/xleaddbr" method="POST">
           <!-- TODO: create the form based on the specification in the Final Assessment -->
           <fieldset>
             <legend>Observation</legend>
